--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -1350,6 +1350,8 @@
       "customerid": "Customer ID",
       "facilityid": "Facility ID",
       "threeplid": "ThreePL ID",
+      "apikey": "API Key",
+      "apisecret": "API Secret Key",
       "cancel": "CANCEL",
       "save": "SAVE"
     },
