Small edit to english

--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -1132,7 +1132,7 @@
     },
     "tab": {
       "general": "GENERAL DETAILS",
-      "affiliate": "AFFILAITES",
+      "affiliate": "AFFILIATES",
       "campaign": "CAMPAIGNS"
     },
     "info": {
@@ -1189,7 +1189,7 @@
     },
     "tab": {
       "general": "GENERAL DETAILS",
-      "affiliate": "AFFILAITES"
+      "affiliate": "AFFILIATES"
     },
     "customer": {
       "title": "Customer Information",
