Add stripe merchant provider

--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -1496,7 +1496,8 @@
           "processorid": "Zahlungsprozessor-ID",
           "productid": "Produkt-ID",
           "username": "Benutzername",
-          "password": "Passwort"
+          "password": "Passwort",
+          "apikey": "API Key"
         },
         "service": {
           "title": "Kundenbetreuung",
